--- a/client/directives/reviews/reviews.tpl.html
+++ b/client/directives/reviews/reviews.tpl.html
@@ -1,6 +1,6 @@
-<ul>
+<ul class="li-reviews">
   <li ng-repeat="review in reviews">
-    <h2 ng-bind="review.subject"></h2>
+    <h2 class="li-reviews-subject" ng-bind="review.subject"></h2>
     <article ng-bind="review.body"></article>
     <strong>author:</strong><span ng-bind="review.author.username"></span>
   </li>
